css/index: test

--- a/src/css/index.scss
+++ b/src/css/index.scss
@@ -1,9 +1,10 @@
 body {
-  display: flex;
+  display: grid;
 }
 
 .standard-grid {
-	gap: 20px;
+	grid-template-columns: 1fr 1fr 1fr;
+  gap: 20px;
 }
 
 .spaced-grid {
