--- a/src/css/index.scss
+++ b/src/css/index.scss
@@ -1,13 +1,22 @@
 .flex {
   display: flex;
+  gap: 20px;
 }
 
 .standard-grid {
-	grid-template-columns: 1fr 1fr 1fr;
+  grid-template-columns: 1fr 1fr 1fr;
   gap: 20px;
 }
 
 .spaced-grid {
-	column-gap: 40px;
-	row-gap: 20px;
+  column-gap: 40px;
+  row-gap: 20px;
+}
+
+.test {
+  display: flex;
+  width: 100%;
+  align-items: baseline;
+  justify-content: space-between;
+  margin-bottom: 50px;
 }
