--- a/src/css/index.scss
+++ b/src/css/index.scss
@@ -20,3 +20,13 @@
   justify-content: space-between;
   margin-bottom: 50px;
 }
+
+#images {
+  display: flex;
+  flex-direction: column;
+
+  & > .lazy {
+    width: 500px;
+    height: 500px;
+  }
+}
