--- a/src/css/index.scss
+++ b/src/css/index.scss
@@ -1,36 +1,22 @@
-.flex {
+@lost flexbox flex;
+@lost gutter 30px;
+
+* {
+  lost-utility: edit
+}
+
+section {
+  lost-center: 900px;
+  padding: 1rem;
+  row-gap: 10px;
   display: flex;
-  gap: 20px;
-}
 
-.standard-grid {
-  grid-template-columns: 1fr 1fr 1fr;
-  gap: 20px;
-}
-
-.spaced-grid {
-  column-gap: 40px;
-  row-gap: 20px;
-}
-
-.test {
-  display: flex;
-  width: 100%;
-  align-items: baseline;
-  justify-content: space-between;
-  margin-bottom: 50px;
-}
-
-#images {
-  display: flex;
-  flex-direction: column;
-
-  & > .lazy {
-    width: 500px;
-    height: 500px;
-  }
-
-  & > .test1 {
-    display: grid;
+  & div {
+    lost-column: 1/3;
+    height: 100px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
   }
 }
+
