--- a/src/css/index.scss
+++ b/src/css/index.scss
@@ -1,22 +1,54 @@
-@lost flexbox flex;
-@lost gutter 30px;
+// @lost flexbox flex;
+// @lost gutter 30px;
 
-* {
-  lost-utility: edit
-}
+// * {
+//   lost-utility: edit
+// }
 
-section {
-  lost-center: 900px;
+// section {
+//   lost-center: 900px;
+//   padding: 1rem;
+//   row-gap: 10px;
+//   display: flex;
+
+//   & div {
+//     lost-column: 1/3;
+//     height: 100px;
+//     display: flex;
+//     justify-content: center;
+//     align-items: center;
+//   }
+// }
+
+.grid {
+  width: 1000px;
+  margin: 0 auto;
+  display: grid;
+  grid-gap: 30px;
   padding: 1rem;
-  row-gap: 10px;
-  display: flex;
+  background-color: aqua;
+  grid-template:
+    'a   b' 100px
+    'c   d' 100px /
+    1fr 1fr;
 
   & div {
-    lost-column: 1/3;
-    height: 100px;
     display: flex;
     justify-content: center;
     align-items: center;
+    background-color: cadetblue;
+  }
+
+  & .cell-a {
+    grid-area: a;
+  }
+  & .cell-b {
+    grid-area: b;
+  }
+  & .cell-c {
+    grid-area: c;
+  }
+  & .cell-d {
+    grid-area: d;
   }
 }
-
